<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    tools:context=".EmailPassword">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_with_tc_easy_account"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:layout_marginBottom="30dp"


        />

    <EditText
        android:id="@+id/user_email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:hint="@string/email"/>

    <EditText
        android:id="@+id/user_password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:hint="@string/password"/>
    <Button
        android:id="@+id/submitUserLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorAccent"
        android:fontFamily="@font/gentium_basic_bold"
        android:layout_margin="15dp"
        android:text="@string/sign_in"/>

    <TextView
        android:id="@+id/user_sign_in_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</LinearLayout>