<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PreOrder">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="60dp"
        android:layout_marginTop="30dp"
        android:text="@string/pre_order_options"
        android:textSize="40sp"
        app:fontFamily="@font/gentium_basic_bold"

        />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        app:fontFamily="@font/gentium_basic_bold">

        <RadioButton
            android:id="@+id/pre_order_food_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:fontFamily="@font/gentium_basic_bold"
            android:text="@string/pre_order_food" />


        <RadioButton
            android:id="@+id/order_food_at_rest_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:fontFamily="@font/gentium_basic_bold"
            android:text="@string/order_food_at_restaurant" />


    </RadioGroup>

    <Button
        android:id="@+id/confirm_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="50dp"
        android:onClick="decideMenu"
        android:background="@color/colorAccent"
        android:text="@string/confirm"
        app:fontFamily="@font/gentium_basic_bold" />


</LinearLayout>