<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context=".LogIn">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="40dp"
        android:text="@string/sign_in"
        android:textSize="40sp"
        app:fontFamily="@font/gentium_basic_bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/already_have_an_account_with_tc_easy"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"


        />

    <Button
        android:id="@+id/sign_in_from_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorAccent"
        android:textSize="20sp"
        android:fontFamily="@font/gentium_basic_bold"
        android:text="@string/sign_in"
        android:onClick="goToSignIn"
        android:layout_marginBottom="50dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/not_a_user"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"


        />
    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/gentium_basic_bold"
        android:textSize="20sp"
        android:onClick="goToSignUP"
        android:layout_marginBottom="50dp"
        android:background="@color/colorAccent"
        android:text="@string/sign_up_login_screen"/>




</LinearLayout>