<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".CheckOut">

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/gentium_basic_bold"
        android:text="@string/you_are_all_set"
        android:textSize="30sp" />


    <TextView
        android:id="@+id/results_text_view"
        android:layout_width="370dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/border"
        android:padding="20dp"
        android:textSize="22sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/restaurant_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:text="@string/tc_easy"
                android:textColor="@color/grey"
                android:textSize="20sp"

                />

            <TextView
                android:id="@+id/restaurant_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/tc_easy_info"
                android:textColor="@color/grey"
                android:textSize="15sp"

                />


        </LinearLayout>


        <ImageView
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="120dp"
            android:layout_marginRight="300dp"
            android:layout_marginTop="30dp"
            android:paddingRight="100dp"
            android:paddingTop="20dp"

            android:src="@drawable/map" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:orientation="horizontal">


        <Button
            android:id="@+id/email_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorAccent"
            android:padding="10dp"
            android:text="@string/email_confirmation" />

        <Button
            android:id="@+id/sign_out_app_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="40dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorAccent"
            android:padding="10dp"
            android:text="@string/sign_out" />

    </LinearLayout>


</LinearLayout>